--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,15 @@ edition = "2021"
 [dependencies]
 gtk = "0.18.0"
 gdk = "0.18.0"
+
+[build-dependencies]
+gtk = "0.18.0"
+cargo-pack = "0.6.0"
+
+[tasks.build]
+command = "cargo"
+args = ["build"]
+
+[tasks.release]
+command = "cargo"
+args = ["build", "--release"]
